objects/Logger__e/Logger__e.object-meta.xml
<CustomObject>
    <label>Logger</label>
    <pluralLabel>Loggers</pluralLabel>
</CustomObject>