objects/Logger__e/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>