objects/Logger__e/fields/User_Profile_Pic__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_Pic__c</fullName>
    <label>User Profile Pic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>